added banner section

--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-typewriter-effect": "^1.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@storybook/nextjs": "^9.1.9",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
