--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
@@ -34,6 +36,7 @@
     "react-icons": "^5.5.0",
     "react-typewriter-effect": "^1.1.0",
     "sonner": "^2.0.7",
+    "sweetalert2": "^11.23.0",
     "tailwind-merge": "^3.3.1",
     "typewriter-effect": "^2.22.0",
     "zod": "^4.1.11"
